# Image-Classification-Project

./: .gitignore  class_labels.json  evaluate_test_set.py  image_utils.py  main.py  metrics_utils.py  pyproject.toml  utils.py
dataset/train/car/: car_45.avif  car_48.avif
dataset/train/cat/: cat_21.avif  cat_22.avif  cat_29.avif  cat_35.avif
dataset/train/horse/: horse_47.avif
dataset/train/ship/: ship_44.avif
evaluation/20250911_030500/: evaluation_summary.json
evaluation/20250911_110321/: evaluation_summary.json
evaluation/20250911_115416/: evaluation_summary.json
models/: 20250909_101742_best.pth  20250910_183320_best.pth  20250910_195147_best.pth  20250911_042530_best.pth  20250911_044744_last.pth  best.pth  last.pth
